TT-ControlMotor/Parser_XML/Parser.output
Terminals unused in grammar

   OPTION


Grammar

    0 $accept: xml $end

    1 xml: OPEN_HEADER version encoding CLOSE_HEADER root

    2 version: VALUE EQUAL QUOTE VALUE QUOTE

    3 encoding: VALUE EQUAL QUOTE VALUE QUOTE

    4 root: OPEN VALUE CLOSE listPoint OPEN SLASH VALUE CLOSE

    5 listPoint: point
    6          | listPoint point

    7 point: OPEN VALUE optFlag VALUE OPEN SLASH VALUE CLOSE

    8 optFlag: CLOSE
    9        | VALUE EQUAL QUOTE VALUE QUOTE CLOSE


Terminals, with rules where they appear

$end (0) 0
error (256)
VALUE (258) 2 3 4 7 9
OPEN (259) 4 7
CLOSE (260) 4 7 8 9
SLASH (261) 4 7
OPTION (262)
OPEN_HEADER (263) 1
CLOSE_HEADER (264) 1
QUOTE (265) 2 3 9
EQUAL (266) 2 3 9


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
xml (13)
    on left: 1, on right: 0
version (14)
    on left: 2, on right: 1
encoding (15)
    on left: 3, on right: 1
root (16)
    on left: 4, on right: 1
listPoint (17)
    on left: 5 6, on right: 4 6
point (18)
    on left: 7, on right: 5 6
optFlag (19)
    on left: 8 9, on right: 7


State 0

    0 $accept: . xml $end
    1 xml: . OPEN_HEADER version encoding CLOSE_HEADER root

    OPEN_HEADER  shift, and go to state 1

    xml  go to state 2


State 1

    1 xml: OPEN_HEADER . version encoding CLOSE_HEADER root
    2 version: . VALUE EQUAL QUOTE VALUE QUOTE

    VALUE  shift, and go to state 3

    version  go to state 4


State 2

    0 $accept: xml . $end

    $end  shift, and go to state 5


State 3

    2 version: VALUE . EQUAL QUOTE VALUE QUOTE

    EQUAL  shift, and go to state 6


State 4

    1 xml: OPEN_HEADER version . encoding CLOSE_HEADER root
    3 encoding: . VALUE EQUAL QUOTE VALUE QUOTE

    VALUE  shift, and go to state 7

    encoding  go to state 8


State 5

    0 $accept: xml $end .

    $default  accept


State 6

    2 version: VALUE EQUAL . QUOTE VALUE QUOTE

    QUOTE  shift, and go to state 9


State 7

    3 encoding: VALUE . EQUAL QUOTE VALUE QUOTE

    EQUAL  shift, and go to state 10


State 8

    1 xml: OPEN_HEADER version encoding . CLOSE_HEADER root

    CLOSE_HEADER  shift, and go to state 11


State 9

    2 version: VALUE EQUAL QUOTE . VALUE QUOTE

    VALUE  shift, and go to state 12


State 10

    3 encoding: VALUE EQUAL . QUOTE VALUE QUOTE

    QUOTE  shift, and go to state 13


State 11

    1 xml: OPEN_HEADER version encoding CLOSE_HEADER . root
    4 root: . OPEN VALUE CLOSE listPoint OPEN SLASH VALUE CLOSE

    OPEN  shift, and go to state 14

    root  go to state 15


State 12

    2 version: VALUE EQUAL QUOTE VALUE . QUOTE

    QUOTE  shift, and go to state 16


State 13

    3 encoding: VALUE EQUAL QUOTE . VALUE QUOTE

    VALUE  shift, and go to state 17


State 14

    4 root: OPEN . VALUE CLOSE listPoint OPEN SLASH VALUE CLOSE

    VALUE  shift, and go to state 18


State 15

    1 xml: OPEN_HEADER version encoding CLOSE_HEADER root .

    $default  reduce using rule 1 (xml)


State 16

    2 version: VALUE EQUAL QUOTE VALUE QUOTE .

    $default  reduce using rule 2 (version)


State 17

    3 encoding: VALUE EQUAL QUOTE VALUE . QUOTE

    QUOTE  shift, and go to state 19


State 18

    4 root: OPEN VALUE . CLOSE listPoint OPEN SLASH VALUE CLOSE

    CLOSE  shift, and go to state 20


State 19

    3 encoding: VALUE EQUAL QUOTE VALUE QUOTE .

    $default  reduce using rule 3 (encoding)


State 20

    4 root: OPEN VALUE CLOSE . listPoint OPEN SLASH VALUE CLOSE
    5 listPoint: . point
    6          | . listPoint point
    7 point: . OPEN VALUE optFlag VALUE OPEN SLASH VALUE CLOSE

    OPEN  shift, and go to state 21

    listPoint  go to state 22
    point      go to state 23


State 21

    7 point: OPEN . VALUE optFlag VALUE OPEN SLASH VALUE CLOSE

    VALUE  shift, and go to state 24


State 22

    4 root: OPEN VALUE CLOSE listPoint . OPEN SLASH VALUE CLOSE
    6 listPoint: listPoint . point
    7 point: . OPEN VALUE optFlag VALUE OPEN SLASH VALUE CLOSE

    OPEN  shift, and go to state 25

    point  go to state 26


State 23

    5 listPoint: point .

    $default  reduce using rule 5 (listPoint)


State 24

    7 point: OPEN VALUE . optFlag VALUE OPEN SLASH VALUE CLOSE
    8 optFlag: . CLOSE
    9        | . VALUE EQUAL QUOTE VALUE QUOTE CLOSE

    VALUE  shift, and go to state 27
    CLOSE  shift, and go to state 28

    optFlag  go to state 29


State 25

    4 root: OPEN VALUE CLOSE listPoint OPEN . SLASH VALUE CLOSE
    7 point: OPEN . VALUE optFlag VALUE OPEN SLASH VALUE CLOSE

    VALUE  shift, and go to state 24
    SLASH  shift, and go to state 30


State 26

    6 listPoint: listPoint point .

    $default  reduce using rule 6 (listPoint)


State 27

    9 optFlag: VALUE . EQUAL QUOTE VALUE QUOTE CLOSE

    EQUAL  shift, and go to state 31


State 28

    8 optFlag: CLOSE .

    $default  reduce using rule 8 (optFlag)


State 29

    7 point: OPEN VALUE optFlag . VALUE OPEN SLASH VALUE CLOSE

    VALUE  shift, and go to state 32


State 30

    4 root: OPEN VALUE CLOSE listPoint OPEN SLASH . VALUE CLOSE

    VALUE  shift, and go to state 33


State 31

    9 optFlag: VALUE EQUAL . QUOTE VALUE QUOTE CLOSE

    QUOTE  shift, and go to state 34


State 32

    7 point: OPEN VALUE optFlag VALUE . OPEN SLASH VALUE CLOSE

    OPEN  shift, and go to state 35


State 33

    4 root: OPEN VALUE CLOSE listPoint OPEN SLASH VALUE . CLOSE

    CLOSE  shift, and go to state 36


State 34

    9 optFlag: VALUE EQUAL QUOTE . VALUE QUOTE CLOSE

    VALUE  shift, and go to state 37


State 35

    7 point: OPEN VALUE optFlag VALUE OPEN . SLASH VALUE CLOSE

    SLASH  shift, and go to state 38


State 36

    4 root: OPEN VALUE CLOSE listPoint OPEN SLASH VALUE CLOSE .

    $default  reduce using rule 4 (root)


State 37

    9 optFlag: VALUE EQUAL QUOTE VALUE . QUOTE CLOSE

    QUOTE  shift, and go to state 39


State 38

    7 point: OPEN VALUE optFlag VALUE OPEN SLASH . VALUE CLOSE

    VALUE  shift, and go to state 40


State 39

    9 optFlag: VALUE EQUAL QUOTE VALUE QUOTE . CLOSE

    CLOSE  shift, and go to state 41


State 40

    7 point: OPEN VALUE optFlag VALUE OPEN SLASH VALUE . CLOSE

    CLOSE  shift, and go to state 42


State 41

    9 optFlag: VALUE EQUAL QUOTE VALUE QUOTE CLOSE .

    $default  reduce using rule 9 (optFlag)


State 42

    7 point: OPEN VALUE optFlag VALUE OPEN SLASH VALUE CLOSE .

    $default  reduce using rule 7 (point)
